add main.js logic for BMI calculation

--- a/BMI Calculator/index.html
+++ b/BMI Calculator/index.html
@@ -13,11 +13,11 @@
 
             <div class="wrapper">
                 <label for="height">Your Height (cm):</label>
-                <input type="number" min="0" id="height" />
+                <input type="number" min="0" id="height" placeholder="Height" />
             </div>
             <div class="wrapper">
-                <label for="Weight">Your Weight (kg):</label>
-                <input type="number" min="0" id="Weight" />
+                <label for="weight">Your Weight (kg):</label>
+                <input type="number" min="0" id="weight" placeholder="Weight" />
             </div>
             <button>Compute BMI</button>
             <div class="wrapper">
@@ -27,6 +27,6 @@
             <p>Your Weight Condition: <span class="condition"></span></p>
         </div>
 
-        <script href="main.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
