--- a/Dark Mode BG Toggler/index.html
+++ b/Dark Mode BG Toggler/index.html
@@ -6,9 +6,9 @@
         <title>DarkMode Toggler</title>
         <link rel="stylesheet" href="style.css" />
     </head>
-    <body>
+    <body class="light">
         <div class="container">
-            <input type="checkbox" name="" id="toggler" />
+            <input type="checkbox" id="toggler" />
             <label for="toggler"><span></span></label>
         </div>
         <script src="main.js"></script>
