--- a/Dark Mode BG Toggler/index.html
+++ b/Dark Mode BG Toggler/index.html
@@ -6,7 +6,7 @@
         <title>DarkMode Toggler</title>
         <link rel="stylesheet" href="style.css" />
     </head>
-    <body class="light">
+    <body>
         <div class="container">
             <input type="checkbox" id="toggler" />
             <label for="toggler"><span></span></label>
